--- a/R/syndromic_ct_daily.Rmd
+++ b/R/syndromic_ct_daily.Rmd
@@ -24,7 +24,7 @@ library(ciTools)
 ```
 
 ##Import and clean the data
-```{r, eval=F}
+```{r}
 ds1a<-read.csv('../DO_NOT_SYNC/yale_view_2018_2019.csv')
 ds1b<-read.csv('../DO_NOT_SYNC/yale_view_2020.csv')
 
@@ -35,7 +35,7 @@ zip.cw[substr(zip.cw$Zip.Code,1,2) =='06',]
 ```
 
 96% of entries have a CT ZIP code (06XXX)
-```{r, eval=F}
+```{r}
 datestr1a<-as.character(ds1a$date_time_of_admission)
 ds1a$adate<-as.Date(substr(datestr1a,1,10))
 ds1a[ds1a$adate<as.Date('2020-01-01'),]
@@ -48,7 +48,13 @@ ds1$ili<-grepl('ILI', ds1$classification)
 ds1$cough<-grepl('COUGH', ds1$classification)
 ds1$respiratory<-grepl('RESPIRATORY', ds1$classification)
 ds1$circulatory<-grepl('CIRCULATORY', ds1$classification)
-ds1$ili2<- grepl('FEVER/FLU', ds1$classification) 
+ds1$ili2<- grepl('FEVER/FLU', ds1$classification)
+ds1$admitted<-0
+#Guessing on this list
+ds1$admitted[ds1$disposition %in% c('9','09','Admitted', 'Adm','TRANSFER to Inpatien', 'YALE','DSCH to VA Hosp Fede', 'Transfer to Danbury',  'HARTFORD', 'STFRANCIS','PACHR Hospit')] <-1
+ds1$ili2.admit<-ds1$ili2*ds1$admitted
+ds1$resp.admit<-ds1$respiratory*ds1$admitted
+
 ds1$agec<-NA
 ds1$agec[ds1$age>=0  & ds1$age<5]<-1
 ds1$agec[ds1$age>=5  & ds1$age<18]<-2
@@ -63,7 +69,7 @@ ds2<-merge(ds1, zip.cw, by.x='zipcode', by.y='Zip.Code')
 ```
 
 ```{r, eval=F}
-ds1.m<-melt(ds2[,c('adate', 'County','agec','ili','cough','respiratory','circulatory','ili2','all.visits')], id.vars=c('adate','County','agec'))
+ds1.m<-melt(ds2[,c('adate', 'County','agec','ili','cough','respiratory','circulatory','ili2','all.visits', 'ili2.admit', 'resp.admit','admitted')], id.vars=c('adate','County','agec'))
 last.date<- max(ds1.m$adate)
 ds1.m<-ds1.m[ds1.m$adate != last.date,] #remove last day from the dataset,assuming it is incomplete
 ds1.m<-ds1.m[ds1.m$adate != (last.date-1),] #remove second to last day from the dataset,assuming it is incomplete
@@ -75,7 +81,7 @@ ds1.c<-acast(ds1.m, agec~adate ~County~variable, fun.aggregate = sum)
 ```{r}
 ds1.m<-readRDS('../DO_NOT_SYNC/county_ts_ct.rds')
 ds1.c<-acast(ds1.m, agec~adate ~County~variable, fun.aggregate = sum)
-saveRDS(ds1.c,'./private_data/shiny_data.rds') #save data for the shiny app
+#saveRDS(ds1.c,'./private_data/shiny_data.rds') #save data for the shiny app
 
 ```
 
@@ -84,12 +90,12 @@ saveRDS(ds1.c,'./private_data/shiny_data.rds') #save data for the shiny app
 counties<-dimnames(ds1.c)[[3]]
 ages<-dimnames(ds1.c)[[1]]
 #syndromes<- dimnames(ds1.c)[[4]]
-syndromes<-'ili2'
+syndromes<-'resp.admit'
 for(j in syndromes){
 for(i in counties){
 par(mfrow=c(2,3))  
 for(k in ages){
-  plot(ds1.c[k,,i,j]/ds1.c[k,,i,'all.visits'], type='l', bty='l', main=paste(j,i,k))
+  plot(ds1.c[k,,i,j]/ds1.c[k,,i,'admitted'], type='l', bty='l', main=paste(j,i,k))
   }
  }
 }
@@ -97,7 +103,29 @@ for(k in ages){
 
 ```
 
-
+Aggregate admit data by week since so sparse
+IMPORTANT NOTE FROM KRISTEN: "Our data are near-real time, but a disposition is not populated until time of discharge.  Therefore, some people who are admitted may have a missing disposition until final discharge from their inpatient admission.  Most hospitals consider admission from the ED a “transfer” within their facility and not a true discharge, so an update message is not generated."
+If we use all admissions as the denominator, this could help, but would assume length of stay for ili/resp is same as for other causes of hospialization
+```{r, eval=F}
+ds2$aweek<-floor_date(ds2$adate, unit='week')
+ds1.w.m<-melt(ds2[,c('aweek', 'County','agec','ili','cough','respiratory','circulatory','ili2','all.visits', 'ili2.admit', 'resp.admit','admitted')], id.vars=c('aweek','County','agec'))
+ds1.w.c<-acast(ds1.w.m, agec~aweek ~County~variable, fun.aggregate = sum)
+n.weeks<-dim(ds1.w.c)[2]
+ds1.w.c<-ds1.w.c[,-n.weeks,,]
+week.dates<-as.Date(dimnames(ds1.w.c)[[2]])
+dates.select<- week.dates >= as.Date('2020-02-01')
+counties<-dimnames(ds1.w.c)[[3]]
+ages<-dimnames(ds1.w.c)[[1]]
+syndromes<-'resp.admit'
+for(j in syndromes){
+for(i in counties){
+par(mfrow=c(2,3))  
+for(k in ages){
+  plot(week.dates[dates.select],ds1.w.c[k,dates.select,i,j]/ds1.w.c[k,dates.select,i,'admitted'], type='l', bty='l', main=paste(j,i,k))
+  }
+ }
+}
+```
 
 
 ##Import auxillary data
@@ -182,9 +210,9 @@ glm.func<-function(x.test, age.test, syndrome, all.cause.name){
   sqrt.rsv =sqrt(clean.array.citywide[,age.test,'rsv.searches']) #same for all ages and boroughs
   sqrt.flu =sqrt(clean.array.citywide[,age.test,'flu.rate']) #same for all ages and boroughs
   
-  sqrt.flu<- na.locf(sqrt.flu)  #fill in missing observations for flu at end of TS with most recent observed values
+  sqrt.flu<- na_locf(sqrt.flu)  #fill in missing observations for flu at end of TS with most recent observed values
   
-    sqrt.rsv<- na.locf(sqrt.rsv)  #fill in missing observations for RSV at end of TS with most recent observed values
+    sqrt.rsv<- na_locf(sqrt.rsv)  #fill in missing observations for RSV at end of TS with most recent observed values
 
     
   t2<-1:length(y.age)
@@ -205,12 +233,23 @@ glm.func<-function(x.test, age.test, syndrome, all.cause.name){
                    day.of.week+
                    sin1+cos1 +sin2+cos2+ sin3+cos3 +log(offset1[1,]+0.5)"
   ))
+   form2<-as.formula(paste0('y.age',"~ epiyr.index.f*sqrt.rsv +   #rsv effect varies by epiyr
+                   epiyr.index.f*sqrt.flu + #flu effect, varies by epiyear
+                   day.of.week+
+                   sin1+cos1 +sin2+cos2+ sin3+cos3  "
+  ))
   mod1<-glm(form1, data=ds.glm, family=poisson(link='log'))
-  pred1<-predict(mod1, type='response', newdata = ds.glm)
-  my_data_with_pi <- add_pi(ds.glm, mod1, names = c("lpb", "upb"))
-  resid1<- log((ds.glm$y.age+0.5) /(pred1+0.5))
+   #500 samples total
+   pred.coefs.reg.mean<- mvrnorm(n = 100, mu=coef(mod1), Sigma=vcov( mod1))
+   mod.mat.pred<-model.matrix(form2, data=ds.glm, family='poisson')
+preds.stage1.regmean<- mod.mat.pred %*% t(pred.coefs.reg.mean) 
+preds.stage2<-rpois(n=length(preds.stage1.regmean)*5, exp(preds.stage1.regmean))
+preds.stage2<-matrix(preds.stage2, nrow=nrow(preds.stage1.regmean), ncol=ncol(preds.stage1.regmean)*5)
+ preds.stage2.q<-t(apply(preds.stage2,1,quantile, probs=c(0.025,0.5, 0.975)))                   
   
-  out.list<-list(y=y.age[1,], pred=my_data_with_pi$pred, resid1=resid1, upi=my_data_with_pi$upb, lpi=my_data_with_pi$lpb,'all.cause'= t(clean.array.citywide[,age.test,all.cause.name]))
+   resid1<- log((ds.glm$y.age+0.5) /(preds.stage2.q[,'50%']+0.5))
+   
+  out.list<-list(y=y.age[1,], pred=preds.stage2.q[,'50%'], resid1=resid1, upi=preds.stage2.q[,'97.5%'], lpi=preds.stage2.q[,'2.5%'],'all.cause'= t(clean.array.citywide[,age.test,all.cause.name]))
  
   return(out.list)
 }
